<?x version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment
            android:id="@+id/fragment_add_client"
            android:name="com.johnston.brian.personaltrainer.UserFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/user_fragment"
            />

    </FrameLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:text="@string/newClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/client_Image"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/no_photo"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/take_Image"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/camera"/>

            <EditText
                android:id="@+id/edittext_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/edittext_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:hint="@string/phone"/>

            <EditText
                android:id="@+id/edittext_Email_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:hint="@string/Email_Address"/>

            <TextView
                android:text="@string/Billing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edittext_Cardholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/edittext_CardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/cardnum"/>

            <EditText
                android:id="@+id/edittext_CardExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:hint="@string/expiredate"/>

            <EditText
                android:id="@+id/edittext_BillingAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:padding="10dp"
                android:hint="@string/billingaddress"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/submit_client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_add"
                    android:layout_marginRight="50dp"/>

                <Button
                    android:id="@+id/cancel_client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_cancel"
                   />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>