<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment
            android:id="@+id/fragment_complete_session"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/user_fragment"/>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/session_complete"
        android:id="@+id/text_View"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:id="@+id/checkBox_complete"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:inputType="textMultiLine"
        android:id="@+id/Client_signature"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:id="@+id/complete_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_complete"
            android:layout_marginLeft="50dp"/>

        <Button
            android:id="@+id/cancel_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:layout_marginRight="50dp"/>

    </LinearLayout>


</LinearLayout>